<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_margin="40dp"
		android:clipToPadding="false"
		app:cardCornerRadius="2dp"
		app:cardElevation="4dp">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:scrollbars="none">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<!--<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:padding="12dp"
					android:text="@string/header_text_login"
					android:textColor="@color/light_black"
					android:textSize="20sp"/>
-->

				<ImageView
					android:layout_width="290dp"
					android:layout_height="160dp"
					android:layout_gravity="center"
					android:padding="12dp"
					android:scaleType="fitXY"
					android:src="@mipmap/ic_mpos_logo"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="20dp"
					android:padding="12dp">

					<ImageView
						android:id="@+id/ivAccount"
						android:layout_width="28dp"
						android:layout_height="28dp"
						android:layout_centerVertical="true"
						android:layout_marginEnd="8dp"
						android:layout_marginRight="8dp"
						android:contentDescription="@null"
						android:src="@mipmap/ic_user"/>

					<EditText
						android:id="@+id/userid"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_toEndOf="@+id/ivAccount"
						android:layout_toRightOf="@+id/ivAccount"
						android:background="@drawable/bg_edit_text"
						android:hint="@string/hint_text_username"
						android:imeOptions="actionNext"
						android:maxLines="1"
						android:padding="12dp"
						android:singleLine="true"
						android:textColor="@color/theme_color"
						android:textColorHint="@color/light_black"
						android:textSize="14sp"/>

				</RelativeLayout>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="-12dp"
					android:padding="12dp">

					<ImageView
						android:id="@+id/ivPassword"
						android:layout_width="28dp"
						android:layout_height="28dp"
						android:layout_centerVertical="true"
						android:layout_marginEnd="8dp"
						android:layout_marginRight="8dp"
						android:contentDescription="@null"
						android:src="@mipmap/ic_passowrd"/>

					<EditText
						android:id="@+id/password"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_toEndOf="@+id/ivPassword"
						android:layout_toRightOf="@+id/ivPassword"
						android:background="@drawable/bg_edit_text"
						android:hint="@string/hint_text_password"
						android:imeOptions="actionDone"
						android:inputType="textPassword"
						android:maxLines="1"
						android:padding="12dp"
						android:singleLine="true"
						android:textColor="@color/theme_color"
						android:textColorHint="@color/light_black"
						android:textSize="14sp"/>
				</RelativeLayout>

				<Button
					android:id="@+id/btnLogin"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="20dp"
					android:background="@drawable/bg_button"
					android:paddingLeft="60dp"
					android:paddingRight="60dp"
					android:text="@string/button_text_login"
					android:textAllCaps="false"
					android:textColor="@android:color/white"
					android:textSize="16sp"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="40dp"
						android:background="@color/theme_color">

						<LinearLayout
							android:id="@+id/vgButton"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_centerHorizontal="true"
							android:layout_marginTop="12dp"
							android:orientation="horizontal">

							<ImageView
								android:id="@+id/btnDialog"
								android:layout_width="48dp"
								android:layout_height="48dp"
								android:layout_margin="20dp"
								android:padding="12dp"
								android:src="@mipmap/ic_configuration"
								android:text="@string/button_text_dialog"
								android:textColor="@android:color/white"
								android:textSize="14sp"/>

							<ImageView
								android:id="@+id/btnScanner"
								android:layout_width="48dp"
								android:layout_height="48dp"
								android:layout_margin="20dp"
								android:background="@android:color/transparent"
								android:padding="12dp"
								android:src="@mipmap/ic_scan"
								android:text="@string/button_text_scan"
								android:textColor="@android:color/white"
								android:textSize="14sp"/>
						</LinearLayout>


						<TextView
							android:id="@+id/edtText"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_below="@+id/vgButton"
							android:background="@android:color/transparent"
							android:gravity="center"
							android:padding="12dp"
							android:textColor="@android:color/white"
							android:textSize="12sp"/>


					</RelativeLayout>

					<TextView
						android:layout_width="32dp"
						android:layout_height="32dp"
						android:layout_centerHorizontal="true"
						android:layout_marginTop="30dp"
						android:background="@drawable/bg_or"
						android:gravity="center"
						android:text="@string/text_or"
						android:textColor="@color/theme_color"
						android:textSize="14sp"/>

				</RelativeLayout>
			</LinearLayout>
		</ScrollView>
	</android.support.v7.widget.CardView>
</RelativeLayout>