<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/vgMainDialog"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="12dp"
	android:background="@drawable/background_dialog">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:animateLayoutChanges="true"
		android:background="@drawable/background_dialog"
		android:orientation="vertical"
		android:padding="20dp">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:gravity="center"
				android:text="@string/text_server_configuration"
				android:textColor="@color/bg_main"
				android:textSize="20sp"/>

			<ImageView
				android:id="@+id/btnClose"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:src="@mipmap/ic_close"/>

		</RelativeLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginTop="12dp"
			android:background="@color/bg_main"/>

		<LinearLayout
			android:id="@+id/vgSettings"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:orientation="horizontal"
				android:weightSum="10">

				<AutoCompleteTextView
					android:id="@+id/etServerName"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_margin="4dp"
					android:layout_weight="4"
					android:background="@drawable/bg_configuration_edittext"
					android:imeOptions="actionNext"
					android:inputType="text"
					android:hint="@string/hint_server_name"
					android:maxLines="1"
					android:padding="8dp"
					android:singleLine="true"
					android:textAllCaps="true"
					android:textColor="@color/black"/>


				<EditText
					android:id="@+id/etServerIp"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_margin="4dp"
					android:layout_weight="6"
					android:background="@drawable/bg_configuration_edittext"
					android:digits="1234567890:."
					android:hint="@string/hint_server_ip"
					android:imeOptions="actionDone"
					android:inputType="text"
					android:maxLines="1"
					android:padding="8dp"
					android:singleLine="true"
					android:textAllCaps="true"
					android:textColor="@color/black"/>
			</LinearLayout>


			<LinearLayout
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:orientation="horizontal"
				android:weightSum="10">

				<TextView
					android:id="@+id/txtPrinterType"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_margin="4dp"
					android:layout_weight="4"
					android:inputType="text"
					android:hint="Printer Type"
					android:maxLines="1"
					android:padding="8dp"
					android:singleLine="true"
					android:textAllCaps="true"
					android:textColor="@color/black"/>


				<Spinner
					android:id="@+id/spinnerPrinter"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_margin="4dp"
					android:layout_weight="6"
					android:inputType="text"
					android:maxLines="1"
					android:padding="2dp"
					android:textAllCaps="true"
					android:background="@android:drawable/btn_dropdown"
					android:textColor="@color/black" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:orientation="horizontal"
				android:weightSum="2">

				<Button
					android:id="@+id/btnConfigure"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:background="@drawable/bg_button"
					android:text="@string/button_submit"
					android:textAllCaps="false"
					android:textColor="@color/white"
					android:layout_weight="1"
					android:layout_margin="2dp"
					android:padding="2dp"/>

				<Button
					android:id="@+id/btnClear"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:background="@drawable/bg_button"
					android:text="@string/button_clear"
					android:textAllCaps="false"
					android:textColor="@color/white"
					android:layout_weight="1"
					android:layout_margin="2dp"
					android:padding="2dp"/>

			</LinearLayout>

		</LinearLayout>

		<RelativeLayout
			android:id="@+id/vgProgress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:padding="20dp"
			android:visibility="gone">

			<com.example.apos.views.ProgressBarCircularIndeterminate
				android:id="@+id/vgProgressBar"
				android:layout_width="36dp"
				android:layout_height="36dp"
				android:layout_centerVertical="true"
				android:layout_marginEnd="12dp"
				android:layout_marginRight="12dp"
				android:background="@color/theme_color"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toEndOf="@+id/vgProgressBar"
				android:layout_toRightOf="@+id/vgProgressBar"
				android:ellipsize="end"
				android:singleLine="true"
				android:text="Trying to connect with server"
				android:textColor="@color/theme_color"
				android:textSize="14sp"/>

		</RelativeLayout>
	</LinearLayout>
</RelativeLayout>