<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:layout_margin="1dp"
    android:orientation="vertical">



    <TableLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:stretchColumns="*">

        <TableRow
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:textStyle="bold"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                style="@style/list_title_textview"
                android:text="@string/items"
                android:textSize="@dimen/txt3"/>

            <TextView

                android:layout_marginLeft="140dp"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/list_title_textview"
                android:text="@string/qty"
                android:textStyle="bold"
                android:textSize="@dimen/txt3"
                />

            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="40dp"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/list_title_textview"
                android:text="@string/amt"
                android:textSize="@dimen/txt3"
                />



            <TextView
                android:layout_marginLeft="10dp"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                style="@style/list_title_textview"
                android:text=""
                android:textSize="@dimen/txt3"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/list_title_textview"
                android:text=""
                android:textSize="@dimen/txt3"
                />



        </TableRow>
    </TableLayout>


    <ListView
        android:layout_marginTop="5dp"
        android:id="@+id/listvoidkotselecteditems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:scrollbars="vertical"
        android:clickable="false"/>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:id="@+id/btnvoidkotback"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:textColor="@android:color/white"
            android:text="@string/back"
            android:textSize="@dimen/txt3"/>

        <Button
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:id="@+id/btnvoidkotdone"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:textColor="@android:color/white"
            android:text="Done"
            android:textSize="@dimen/txt3"/>



        <Button
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:id="@+id/btnvoidkotfullkot"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:textColor="@android:color/white"
            android:text="Full Void"
            android:textSize="@dimen/txt3"/>

        <EditText
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:id="@+id/edt_void_kot_total_order_amount"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:inputType="number|numberSigned"
            android:textStyle="bold"
            android:background="@drawable/oval_edittext"
            android:editable="false"
            android:clickable="false"
            android:focusable="false"
            android:textSize="@dimen/txt3"/>

    </LinearLayout>






</LinearLayout>
