<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	android:orientation="vertical">

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="48dp"
		android:background="@color/header_background_sky_blue"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_alignBottom="@+id/tv_kot_header_waiter_name"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true">

			<TextView
				android:id="@+id/tvPosName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="POS"
				android:textColor="@color/white"
				android:textSize="16sp"/>

			<TextView
				android:id="@+id/tv_kot_header_table_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:textSize="12dp"/>

		</LinearLayout>

		<TextView
			android:id="@+id/tv_kot_header_waiter_name"
			style="@style/header_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:padding="12dp"
			android:textSize="14sp"/>
	</RelativeLayout>


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:weightSum="10">

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="5"
			android:background="@drawable/bg_order_master"
			android:orientation="vertical"
			android:padding="4dp">

			<EditText
				android:id="@+id/edtExternalCode"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:background="@drawable/bg_total"
				android:gravity="center"
				android:padding="12dp"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textSize="@dimen/txt4"
				android:maxLines="1"
				android:inputType="text"
				android:textStyle="bold"
				android:hint="External Code"
				android:imeOptions="actionDone"/>


			<LinearLayout
				android:id="@+id/vgTableHeader"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/edtExternalCode"
				android:layout_margin="1dp"
				android:orientation="horizontal"
				android:weightSum="10">

				<TextView
					style="@style/list_title_textview"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="6"
					android:ellipsize="end"
					android:gravity="start"
					android:maxLines="1"
					android:singleLine="true"
					android:text="@string/items"
					android:textSize="12dp" />

				<TextView
					style="@style/list_title_textview"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:ellipsize="end"
					android:gravity="center"
					android:maxLines="1"
					android:singleLine="true"
					android:text="@string/qty"
					android:textSize="12dp" />

				<TextView
					style="@style/list_title_textview"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:ellipsize="end"
					android:gravity="end"
					android:maxLines="1"
					android:singleLine="true"
					android:text="@string/amt"
					android:textSize="12dp" />
			</LinearLayout>

			<ListView
				android:id="@+id/listkotselecteditems"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_above="@+id/vgAmount"
				android:layout_below="@+id/vgTableHeader"
				android:scrollbars="vertical" />

			<RelativeLayout
				android:id="@+id/vgAmount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_above="@+id/vgCheckout"
				android:layout_marginTop="2dp"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/tvTotal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:padding="4dp"
					android:text="@string/str_total_amount"
					android:textColor="@color/input_login" />

				<TextView
					android:id="@+id/edt_kot_total_order_amount"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_toEndOf="@+id/tvTotal"
					android:layout_toRightOf="@+id/tvTotal"
					android:background="@drawable/bg_total"
					android:clickable="false"
					android:editable="false"
					android:gravity="end"
					android:padding="8dp"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textSize="12dp"
					android:textStyle="bold" />
			</RelativeLayout>

			<LinearLayout
				android:id="@+id/vgCheckout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_marginTop="8dp"
				android:orientation="horizontal"
				android:weightSum="2">

				<Button
					android:id="@+id/btnCheckKOT"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_margin="4dp"
					android:layout_weight="1"
					android:background="@drawable/bg_button"
					android:ellipsize="end"
					android:gravity="center"
					android:maxLines="1"
					android:singleLine="true"
					android:text="CHECKKOT"
					android:textColor="@android:color/white"
					android:textSize="12sp" />

				<Button
					android:id="@+id/btnkotSettle"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_margin="4dp"
					android:layout_weight="1"
					android:background="@drawable/bg_button"
					android:gravity="center"
					android:text="PRINT"
					android:textColor="@color/white"
					android:textSize="12sp" />

			</LinearLayout>
		</RelativeLayout>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="5"
			android:orientation="vertical">

			<com.example.apos.util.clsSlidingTabLayout
				android:id="@+id/tabs_kot"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/white" />


			<android.support.v4.view.ViewPager
				android:id="@+id/pager_kot"
				android:layout_width="match_parent"
				android:layout_height="match_parent" />

		</LinearLayout>
	</LinearLayout>
</LinearLayout>
